# gau8

./: CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/lib/: athreads.cpp  athreads.hpp  connectors.hpp  license.cpp  ssh.cpp  useful.cpp  useful.hpp
src/lib/used_by_license_checker/: LICENSE  sha256.cpp  sha256.h
